--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Art/Levels/MainMenu.MainMenu
 EditorStartupMap=/Game/Art/Levels/House1.House1
 GlobalDefaultGameMode=/Game/Core/BP_GameMode.BP_GameMode_C
+GameInstanceClass=/Game/Core/BP_GameInstance.BP_GameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
