Project Settings & Minor functionality changes on action UI
na

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Art/Levels/MainMenu.MainMenu
-EditorStartupMap=/Game/Art/Levels/House1.House1
-GlobalDefaultGameMode=/Game/Core/BP_GameMode.BP_GameMode_C
+EditorStartupMap=/Game/Art/Levels/ResidentialHouses.ResidentialHouses
+GlobalDefaultGameMode=/Game/Core/Systems/Pawns/RTSGameMode.RTSGameMode_C
 GameInstanceClass=/Game/Core/BP_GameInstance.BP_GameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
