--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ Plugins/*/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 Content/StarterContent/Architecture/Floor_400x400.uasset
+Content/StarterContent/Audio/Collapse01.uasset
+Content/StarterContent/Architecture/Floor_400x400.uasset
