Updated Game Mode
Got rid of RTS game mode and replaced it with BP Gamemode. Updated BP Gamemode to follow the same procedures as RTSGameMode.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Art/Levels/MainMenu.MainMenu
 EditorStartupMap=/Game/Art/Levels/ResidentialHouses.ResidentialHouses
-GlobalDefaultGameMode=/Game/Core/Systems/Pawns/RTSGameMode.RTSGameMode_C
+GlobalDefaultGameMode=/Game/Core/BP_GameMode.BP_GameMode_C
 GameInstanceClass=/Game/Core/BP_GameInstance.BP_GameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
