added logic for the helmet, radio, and main menu screen.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -152,4 +152,5 @@ bHasVoiceEnabled=true
 
 [/Script/Engine.AudioSettings]
 VoiPSoundClass=/Game/AdvancedVoIPVoiceChatSystem/Audio/SoundClass/SC_VOIP_SoundClass.SC_VOIP_SoundClass
+VoiPSampleRate=Normal24000Hz
 
