--- a/NFPA_Multiplayer.uproject
+++ b/NFPA_Multiplayer.uproject
@@ -23,6 +23,10 @@
 		{
 			"Name": "AdvancedSteamSessions",
 			"Enabled": false
+		},
+		{
+			"Name": "NiagaraFluids",
+			"Enabled": true
 		}
 	]
 }
