adjusted the engine and game ini files for deployment purposes.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Art/Levels/MainMenu.MainMenu
-EditorStartupMap=/Game/Art/Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/Art/Levels/ResidentialHouses.ResidentialHouses
 GlobalDefaultGameMode=/Game/Core/BP_GameMode.BP_GameMode_C
 GameInstanceClass=/Game/Core/BP_GameInstance.BP_GameInstance_C
 GlobalDefaultServerGameMode=/Game/Core/BP_GameMode.BP_GameMode_C
