--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,9 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=FB853D194AAC3D7D034C0486E094C234
+ProjectName=NFPA First Application
+ProjectVersion=06.16.2023.Alpha
+CompanyName=GHD
 
 [StartupActions]
 bAddPacks=True
