Adjusted textures part 1

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -155,3 +155,6 @@ bHasVoiceEnabled=true
 VoiPSoundClass=/Game/AdvancedVoIPVoiceChatSystem/Audio/SoundClass/SC_VOIP_SoundClass.SC_VOIP_SoundClass
 VoiPSampleRate=Normal24000Hz
 
+
+r.TextureStreaming=True
+r.Streaming.PoolSize=3000
