--- a/NFPA_Multiplayer.uproject
+++ b/NFPA_Multiplayer.uproject
@@ -16,12 +16,22 @@
 			"Enabled": true
 		},
 		{
+			"Name": "UniversalVoiceChatPro",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/eda7d893311147d1b7a6e8084be096c4"
+		},
+		{
 			"Name": "AdvancedSteamSessions",
 			"Enabled": false
 		},
 		{
 			"Name": "NiagaraFluids",
 			"Enabled": true
+		},
+		{
+			"Name": "TypewriterPlugin",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/5796d04c2eba4cffa4bd7df597220967"
 		}
 	],
 	"TargetPlatforms": [
