many changes to ai

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -160,3 +160,6 @@ VoiPSampleRate=Normal24000Hz
 r.TextureStreaming=True
 r.Streaming.PoolSize=3000
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
